--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "1.2.0"
+    "swr": "1.2.0",
+    "dotenv": "16.0.1"
   },
   "devDependencies": {
     "prettier": "2.5.1",
