--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "prettier": "2.5.1",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "@types/node": "18.0.0"
   },
   "repository": {
     "type": "git",
